@@ -1,3 +1,13 @@
+2008-10-06  Matthias Clasen  <mclasen@redhat.com>
+
+	Merged from trunk:
+
+	Bug 554962 – maixmize horizontally/vertically doesn't work with
+	metacity
+
+	* metacity-window-manager.c: Use the right values for the
+	h/v maximization titlebar doubleclick action.
+
 ==================== 2.24.0.1 ====================
 
 ==================== 2.23.2 ====================
